...

    <TextView
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:id="@+id/forgotPassword"
        android:text="@string/forgot_password"
        android:textColor="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
...
